--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "Starting over on a personal site with 11ty 2.0",
   "main": "index.html",
   "scripts": {
-    "watch:sass": "sass --watch src/_sass:_site/css",
-    "watch:eleventy": "eleventy --serve --incremental",
-    "build:sass": "sass src/_sass:_site/css",
-    "build:eleventy": "eleventy",
-    "start": "ELEVENTY_ENV=dev npm-run-all build:sass --parallel watch:*",
-    "build": "ELEVENTY_ENV=prod npm-run-all build:sass build:eleventy",
+    "start": "eleventy --serve --incremental",
+    "build": "eleventy",
     "lint": "stylelint \"**/*.scss\" --fix"
   },
   "repository": {
@@ -31,8 +27,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.48.0",
+    "sass": "^1.58.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
