--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@11ty/eleventy-img": "^3.0.0",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^2.0.0",
+    "js-yaml": "^4.1.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
     "sass": "^1.58.0",
