--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[build]
+command = "npm build"
+publish = "_site"
+
+[dev]
+command = "npm start"
+
 [[plugins]]
 package = "netlify-plugin-cache"
 
