--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
     "@11ty/eleventy-img": "^3.0.0",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
+    "@staticcms/core": "^1.2.8",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "js-yaml": "^4.1.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
+    "netlify-plugin-cache": "^1.0.3",
     "sass": "^1.58.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-scss": "^4.1.0"
-  },
-  "dependencies": {
-    "netlify-plugin-cache": "^1.0.3"
   }
 }
