--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,24 +1,33 @@
 backend:
-  # Use netlify identity as backend
   name: git-gateway
   branch: main
-  ### enable below lines for github integration ###
-  name: github
-  repo: mirisuzanne/mia.wtf
-media_folder: "src/_assets/img"
-public_folder: "/img/"
+media_folder: "src/_assets/images/cms"
+public_folder: "/cms/"
 
 # Please run "npx static-cms-proxy-server" for local backend
-local_backend: true
+# local_backend: true
 collections:
-  - name: 'blog' # Used in routes, e.g., /admin/collections/blog
-    label: 'Blog' # Used in the UI
+  - name: posts # Used in routes, e.g., /admin/collections/blog
+    label: Posts
     folder: 'src/posts' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: '{{slug}}' # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'page' }
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Featured Image', name: 'thumbnail', widget: 'image' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - name: layout
+        widget: hidden
+        default: page
+      - name: title
+      - name: date
+        widget: datetime
+      - name: hero
+        widget: object
+        summary: '{{fields.alt}}'
+        collapsed: true
+        fields:
+          - name: img
+            widget: image
+          - name: alt
+      - name: summary
+        widget: text
+      - name: body
+        widget: markdown
