--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Starting over on a personal site with 11ty 2.0",
   "main": "index.html",
   "scripts": {
+    "dev": "eleventy --serve",
     "start": "eleventy --serve --incremental",
-    "build": "eleventy",
-    "lint": "stylelint \"**/*.scss\" --fix"
+    "build": "eleventy"
   },
   "repository": {
     "type": "git",
@@ -20,22 +20,20 @@
     "url": "https://github.com/mirisuzanne/mia.wtf/issues"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-beta.3",
-    "@11ty/eleventy-fetch": "^3.0.0",
-    "@11ty/eleventy-img": "^3.0.0",
+    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-fetch": "^4.0.0",
+    "@11ty/eleventy-img": "^3.1.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
-    "@staticcms/core": "^1.2.8",
-    "date-fns": "^2.29.3",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@11ty/eleventy-plugin-webc": "^0.11.1",
+    "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dotenv": "^16.3.1",
     "js-yaml": "^4.1.0",
-    "markdown-it": "^12.3.2",
-    "markdown-it-anchor": "^8.4.1",
+    "markdown-it": "^13.0.2",
+    "markdown-it-anchor": "^8.6.7",
     "netlify-plugin-cache": "^1.0.3",
-    "sass": "^1.58.0",
-    "stylelint": "^14.2.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-scss": "^4.1.0"
+    "remove-markdown": "^0.5.0",
+    "sass": "^1.68.0"
   }
 }
