--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.1",
+    "@fontsource-variable/alegreya": "^5.0.9",
+    "@fontsource-variable/jetbrains-mono": "^5.0.18",
     "@octokit/rest": "^20.0.2",
+    "@sindresorhus/slugify": "^2.2.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -34,6 +37,7 @@
     "markdown-it": "^13.0.2",
     "markdown-it-anchor": "^8.6.7",
     "netlify-plugin-cache": "^1.0.3",
+    "prism-themes": "^1.9.0",
     "remove-markdown": "^0.5.0",
     "sass": "^1.68.0"
   }
