Consistent headings, and a colophon

--- a/src/_data/site.yaml
+++ b/src/_data/site.yaml
@@ -1,4 +1,4 @@
-title: Mia Culpa
+title: Miriam Suzanne
 description: Art & CSS & other digital artifacts of my life
 author: Miriam Eric Suzanne
 feed: /feed.xml
