--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.2",
+    "markdown-it-deflist": "^3.0.0",
     "markdown-it-mark": "^4.0.0",
     "netlify-plugin-cache": "^1.0.3",
     "prism-themes": "^1.9.0",
