--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@ command = "npm run build"
 publish = "_site"
 
 [dev]
-command = "npm start"
+command = "npm run dev"
 
 [[plugins]]
 package = "netlify-plugin-cache"
@@ -13,3 +13,8 @@ package = "netlify-plugin-cache"
     "_site/img/output", # Eleventy Image Disk Cache
     ".cache" # Remote Asset Cache
   ]
+
+[[redirects]]
+from = "/api/*"
+to = "/.netlify/functions/:splat"
+status = 200
