--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fontsource-variable/victor-mono": "^5.0.6",
     "@fontsource/alegreya-sans": "^5.0.14",
     "@octokit/rest": "^20.1.1",
+    "@sindresorhus/slugify": "^2.2.1",
     "@terriblemia/eight-ball": "^0.2.0",
     "@terriblemia/ground-control": "^0.3.0",
     "baseline-status": "^1.0.4",
