--- a/src/_data/site.yaml
+++ b/src/_data/site.yaml
@@ -1,6 +1,7 @@
 title: Miriam Suzanne
 description: Art & CSS & other digital artifacts of my life
 author: Miriam Eric Suzanne
+domain: www.miriamsuzanne.com
 feed: /feed.xml
 
 sizes:
