--- a/src/_data/artifacts.yaml
+++ b/src/_data/artifacts.yaml
@@ -5,7 +5,7 @@
   role: bass & vocals
   area: art
   type: album
-  tags: [area:art, art:music, org:teacup-gorilla]
+  tags: [area:art, art:music, org:teacup-gorilla, org:grapefruit-lab]
   with: Teacup Gorilla
   date: 2025-01-10
   at: https://www.teacupgorilla.com/albums/jane-eyre/
@@ -21,7 +21,7 @@
   role: bass, vocals, lyrics
   area: art
   type: album
-  tags: [area:art, art:music, org:teacup-gorilla]
+  tags: [area:art, art:music, org:teacup-gorilla, org:grapefruit-lab]
   with: Teacup Gorilla
   date: 2024-08-20
   at: https://www.teacupgorilla.com/albums/whiskey-from-strangers/
