--- a/src/posts/narrators/narrators.11tydata.yaml
+++ b/src/posts/narrators/narrators.11tydata.yaml
@@ -4,9 +4,8 @@ type: story telling
 series: narrators
 tags:
   - narrators
-  - writing
   - journal
-  - show
+  - podcast
 summary: |
   [The Narrators](https://thenarrators.org/) is a live storytelling
   show and podcast featuring true stories on a monthly theme.
