--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "url": "https://github.com/mirisuzanne/mia.wtf/issues"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-beta.1",
-    "@11ty/eleventy-fetch": "^4.0.1",
-    "@11ty/eleventy-img": "^4.0.2",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-fetch": "^5.0.2",
+    "@11ty/eleventy-img": "^6.0.2",
+    "@11ty/eleventy-plugin-rss": "^2.0.3",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@11ty/eleventy-plugin-webc": "^0.11.2",
     "@fontsource-variable/alegreya": "^5.0.15",
@@ -53,6 +53,7 @@
     "@11ty/is-land": "^4.0.0",
     "@daviddarnes/mastodon-post": "^1.3.0",
     "@terriblemia/eight-ball": "^0.2.0",
-    "@terriblemia/ground-control": "^0.3.0"
+    "@terriblemia/ground-control": "^0.3.0",
+    "@terriblemia/track-list": "^1.2.0"
   }
 }
