--- a/src/_data/orgs.yaml
+++ b/src/_data/orgs.yaml
@@ -1,34 +1,12 @@
-- title: Grapefruit Lab
-  role: co-founder
-  sub: hybrid performance laboratory, practicing queer futures
-  date: 2008-02-06
-  end: ongoing
-  adr: Denver, CO
-  is: [art, theater]
-
-- title: Teacup Gorilla
-  role: bass & vocals
-  sub: pre-apocalyptic post-rock
-  date: 2010-03-13
-  end: ongoing
-  adr: Denver, CO
-  is: [art, music]
-
 - title: Raven Jane
   role: bass & mandolin
   sub: indie roots-rock
   date: 2010-09-14
   end: 2012-03-24
   adr: Denver, CO
-  is: [art, music]
-
-- title: New World Arts
-  role: artistic director
-  sub: alternative and devised theater
-  date: 2001-01-03
-  end: 2006-06-06
-  adr: Goshen, IN
-  is: [art, theater]
+  tags:
+    - area:art
+    - art:music
 
 - title: The LIDA Project
   role: technical director
@@ -36,15 +14,21 @@
   date: 2008-05-01
   end: 2010-03-01
   adr: Denver, CO
-  is: [art, theater]
+  at: https://lida.org/
+  tags:
+    - area:art
+    - art:theater
 
 - title: Countdown to Zero
   role: technical director
-  sub: political theater collective, with a 10-show lifespan
+  sub: 10-show political theater collective
   date: 2007-09-20
   end: 2010-01-14
   adr: Denver, CO
-  is: [art, theater]
+  at: https://countdowntozero.org/
+  tags:
+    - area:art
+    - art:theater
 
 - title: Dirt Circle Dogs
   role: bass & guitar
@@ -52,4 +36,7 @@
   date: 2007-08-14
   end: 2010-01-14
   adr: Denver, CO
-  is: [art, music]
+  at: https://dirtcircledogs.com/
+  tags:
+    - area:art
+    - art:music
